# wasm-rust

./: .gitignore  README.md  lib  test.out
add_example/: Cargo.toml  index.html
algorithms/: Cargo.toml  index.html
algorithms/src/: lib.rs
bubblesort/: Cargo.toml  arr.js  index.html
bubblesort/src/: lib.rs
examples/: index.html
examples/src/: lib.rs
fibonacci/: Cargo.toml  index.html
fibonacci/src/: lib.rs
webpack/pkg/: index_bg.js  index_bg.wasm
