[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84" # https://crates.io/crates/wasm-bindgen

[profile.release]
opt-level=3
lto=true

[profile.dev]
opt-level=3
lto=true